--- a/README
+++ b/README
@@ -1,1 +1,4 @@
-This is a README
+This is your new Play application
+=====================================
+
+This file will be packaged with your application, when using `play dist`.
